# anomaly-detection

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  app.cpp  vcpkg.json
Solution/1.Presentation/: Comments.txt
Solution/2.Application/Base/: IApplicationService.h
Solution/2.Application/Factories/: ApplicationServiceFactory.cpp
Solution/2.Application/Providers/: HttpApplicationService.cpp
Solution/3.Domain/Model/: AnalysisInfo.cpp  RequestInfo.cpp  Summary.cpp
Solution/3.Domain/Repository/Base/: ISummaryRepository.h
Solution/3.Domain/Repository/Factories/: SummaryRepositoryFactory.cpp
Solution/3.Domain/Repository/Providers/: BlobSummaryRepository.cpp  FSSummaryRepository.cpp  S3SummaryRepository.cpp
Solution/3.Domain/Service/Base/: IAnalysisService.h
Solution/3.Domain/Service/Factories/: AnalysisServiceFactory.cpp
Solution/3.Domain/Service/Providers/: SHESDAnalysisService.cpp
Solution/4.Infrastructure/Helpers/: DateHelper.cpp  FormatHelper.cpp  StringHelper.cpp  VectorHelper.cpp
Solution/4.Infrastructure/Messaging/Base/: IMessagingService.h
Solution/4.Infrastructure/Messaging/Factories/: MessagingServiceFactory.cpp
Solution/4.Infrastructure/Messaging/Providers/: AwsSqsMessagingService.cpp  AzureEventGridMessagingService.cpp  KafkaMessagingService.cpp
Solution/5.External/Include/: shesd.hpp
Solution/6.Tests/: Comments.txt
